--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,16 @@ p {
   padding: 10px;
   grid-row-gap: 15px;
 }
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container p {
+  padding: 10px;
+}
+
 .portraits {
   display: grid;transition: .5s ease;
   margin-left: auto;
