--- a/css/style.css
+++ b/css/style.css
@@ -368,8 +368,12 @@ tbody tr:last-child th:first-child{
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
-.flip-card:hover .flip-card:focus .flip-card-inner {
+.flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
+}
+
+.flip-card:focus {
+	transform: rotateY(180deg);
 }
 
 .flip-card-front, .flip-card-back {
