--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,10 @@ tbody tr:last-child th:first-child{
   transform: rotateY(180deg);
 }
 
+.flip-card:focus .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
 .flip-card-front, .flip-card-back {
   position: absolute;
   width: 100%;
