--- a/css/style.css
+++ b/css/style.css
@@ -203,30 +203,18 @@ p {
   padding: 20px;
 }
 
-/*.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%)
+.grid-item .caption {
+      position: absolute;
+      width: 283px;
+      height: 50px;
+      bottom: 0px;
+      left: 0px;
+      color: #ffffff;
+      background: green;
+      text-align:center;
+      font-weight:bold;
+      opacity:0.7;
 }
-
-.portrait:hover img {
-  opacity: 0.3;
-}
-
-.portrait:hover .middle {
-  opacity: 1;
-}
-
-.text {
-  background-color: #4CAF50;
-  color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-}*/
 
 .skip a{
     top: -40px;
