--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,47 @@
+@charset "utf-8";
+/*Global Styles */
 body{
-	background-image: url("../images/duskvol_map.jpg");
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+  background:#030027;
 }
 
+header{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+
+/* Skip to Content */
+.skip a{
+    top: -40px;
+    position: absolute;
+    background: white;
+    left: 0;
+    padding: 6px;
+    -webkit-transition: top 1s ease-out;
+    transition: top 1s ease-out;
+    z-index: 1;  
+}
+
+.skip a:focus {
+  position: absolute;
+  top: 0;
+}
+
+*:focus{
+  border: 2px solid #000000;
+}
+
+/*Navigation Bar*/
 nav{
   /*background-color: #ddd;*/
   padding: 20px; 
   text-align: left;
-  grid-column: 1 / -1;
-  grid-row: 1 / span 1;
-  width: 100%;
-    position: absolute;
-    background: linear-gradient(45deg, #F06553, #F06553, #3c3b5f , #381c2a,#381c2a, #2c0635);
+  display: flex;
+    width: 100%;
+  flex-direction: column;
+    background: linear-gradient(45deg, #F06553, #350706, #350706, #3c3b5f, #381c2a, #381c2a, #2c0635);
     background-size: 600% 100%;
     animation: gradient 16s linear infinite;
     animation-direction: alternate;
@@ -48,17 +76,19 @@ nav li a {
 nav li a:hover:not(.active) {
   background-color: #2c0635;
 }
+nav li a:hover:not(.active):before {
+  content: "X ";
+}
+
+#banner {
+  max-width:80%;
+  display: inline;
+}
 
 .active {
   background-color: #4e148c;
 }
 
-main{
-	background-color: #f2f3d9;
-	/*border: 10px radial-gradiant(#f2f3d9, #030027);*/
-	padding: 30px;
-	align-self: center;
-}
 
 nav li{
   display:inline;
@@ -76,27 +106,41 @@ nav a:hover{
   text-decoration: underline;
 }
 
+/* Main Content sections */
+main{
+  background-color: #f2f3d9;
+  padding: 30px;
+  align-self: center;
+}
+
+p {
+  font-size: 16px;
+  padding-top: 10px;
+}
+
 h1{
-	font-family: 'Meddon', 'Georgia', 'Arial';
-	color: #350706;
-	font-size: 32px;
-	padding-bottom: 15px;
+  font-family: 'Meddon', 'Georgia', 'Arial';
+  color: #350706;
+  font-size: 32px;
+  padding: 15px;
+  text-align: center;
 }
 
 h2{
-
+  padding-top: 10px;
 }
 
-/*nickname fonts*/
+/*Nickname Fonts*/
 #wicker, #frog, #twelves, #byron {
   color: #350706;
+  font-size: 24px;
 }
 #twelves {
   font-family: 'Indie Flower', 'Georgia', 'Arial';
 }
 
 #frog {
-  font-family: 'Dancing Spirit', 'Georgia', 'Arial';
+  font-family: 'Dancing Script', 'Georgia', 'Arial';
 }
 
 #wicker {
@@ -107,6 +151,368 @@ h2{
   font-family: 'Ruge Boogie', 'Georgia', 'Arial';
 }
 
+/*Newspaper Dimensions*/
+.newspaper-background{
+  background-image: url("../images/background.jpg");
+  border: solid black;
+}
+}
+.newspaper {
+  column-count: 1;
+  column-gap: 40px;
+  column-rule-style: solid;
+}
+
+.newspaper img {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/*parallax!*/
+.steampunk, .london, .hull {
+  /* Set a specific height */
+  min-height: 200px;
+  width: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+.steampunk {
+    background-image: url("../images/steampunk_landscape.jpg");
+}
+
+.london {
+  background-image: url("../images/victorian_london.jpg");
+}
+
+.hull {
+  background-image: url("../images/hull.png");
+}
+
+/* Footer */
+footer{
+  left:0px;
+  bottom:0px;
+  min-height: 60px;
+  width:100%;
+  background:#030027;
+  text-align:center;
+  padding-bottom: 10px;
+}
+footer p {
+  color: white;
+}
+
+.map {
+  border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.grid-container {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr;
+  /*background-color: #2196F3;*/
+  padding: 10px;
+  grid-row-gap: 15px;
+}
+
+.grid-container img {
+  width: 90%;
+  display: inline;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.faction-grid {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr;
+  padding: 10px;
+  grid-row-gap: 15px;
+}
+.faction-grid img {
+  width: 90%;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-container p {
+  padding: 10px;
+}
+
+.crew-grid {
+  display: grid;
+  grid-gap: 10px;
+  background-color: ivory;
+  padding: 10px;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.crew-grid img {
+  width: 80%;
+  max-width: 400px;
+  border-radius: 50%;
+  border:1px solid black;
+  backface-visibility: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grid-item {
+  padding: 20px;
+  position: relative;
+}
+
+.name {
+  grid-row: 2;
+  text-align: center;
+}
+
+.portrait {
+  grid-row: 1;
+}
+
+.stat {
+    grid-row: 3;
+}
+.bio {
+  grid-row: 4;
+}
+
+/*still needs some work*/
+.secret a {
+  text-decoration: none;
+}
+
+/* Faction Status Table */
+table{
+  display: none;
+}
+
+/*newspaper sidebar
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}*/
+
+/*Flip Card Gallery of Factions */
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  
+}
+/* faction card flipping provided by W3School */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card:focus .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2c0635;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+/*Tablet View*/
+@media only screen and (min-width: 481px) {
+  body {
+    background-color: lightblue;
+  }
+
+  main {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+
+    header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  nav {
+   display: flex;
+   flex-direction: row;
+  }
+
+  .name {
+  grid-column: 1 / span 2;
+  grid-row: 2;
+  text-align: center;
+}
+
+.portrait {
+  grid-column: 1 / span 2;
+  grid-row: 1;
+}
+
+.stat {
+  grid-column: 1;
+    grid-row: 3;
+}
+.bio {
+  grid-column: 2;
+  grid-row: 3;
+}
+
+.faction-grid {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
+  grid-row-gap: 15px;
+}
+.faction-grid img {
+  width: 90%;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+/*Newspaper Dimensions*/
+.newspaper {
+  column-count: 2;
+  column-gap: 40px;
+  column-rule-style: solid;
+}
+
+.newspaper img {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+}
+/*Desktop view*/
+@media only screen and (min-width: 1080px) {
+  body {
+    background-color: pink;
+  }
+
+    .grid-container {
+      display: grid;
+      margin-left: auto;
+      margin-right: auto;
+      grid-template-columns: 1fr .5fr;
+      /*background-color: #2196F3;*/
+      padding: 10px;
+      grid-row-gap: 15px;
+}
+.grid-container img {
+      width: 90%;
+      display: inline;
+}
+.grid-bio {
+  display: grid;
+  grid-template-columns: .5fr 1fr;
+  padding-bottom: 20px;
+}
+
+.faction-grid {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 10px;
+  grid-row-gap: 15px;
+}
+.faction-grid img {
+  width: 90%;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.name {
+  grid-column: 2 / span 2;
+  grid-row: 1;
+  text-align: center;
+}
+
+.portrait {
+  grid-column: 1;
+  grid-row: 1 / span 3;
+}
+
+.stat {
+  grid-column: 2;
+    grid-row: 2 / span 2;
+}
+.bio {
+  grid-column: 3;
+  grid-row: 2 / span 2;
+}
+
+/*Newspaper Dimensions*/
 .newspaper {
   column-count: 3;
   column-gap: 40px;
@@ -119,129 +525,9 @@ h2{
   margin-right: auto;
 }
 
-footer{
-  position:fixed;
-  left:0px;
-  bottom:0px;
-  min-height: 60px;
-  width:100%;
-  background:#030027;
-  text-align:center;
-}
-footer p {
-  color: white;
-}
-
-p {
-	font-size: 16px;
-	padding-top: 10px;
-}
-
-.map {
-  border-radius: 8px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid-container {
-  display: grid;
-  margin-left: auto;
-  margin-right: auto;
-  grid-template-columns: 1fr 1fr 1fr;
-  /*background-color: #2196F3;*/
-  padding: 10px;
-  grid-row-gap: 15px;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.flex-container p {
-  padding: 10px;
-}
-
-.portraits {
-  display: grid;transition: .5s ease;
-  margin-left: auto;
-  margin-right: auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  /*background-color: #2196F3;*/
-  padding: 10px;
-  grid-row-gap: 15px;
-}
-
-.grid-container img {
-	width: 90%;
-	border:1px solid black;
-	box-shadow: 10px 10px 5px grey;
-}
-
-.portraits img {
-	width: 90%;
-	border-radius: 50%;
-	border:1px solid black;
-	box-shadow: 10px 10px 5px grey;
-	backface-visibility: hidden;
-}
-
-.grid-bio {
-  display: grid;
-  grid-template-columns: .5fr 1fr;
-  padding: 10px;
-}
-
-.grid-bio img {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
-.grid-item {
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  padding: 20px;
-}
-
-.grid-item .caption {
-      position: absolute;
-      width: 283px;
-      height: 50px;
-      bottom: 0px;
-      left: 0px;
-      color: #ffffff;
-      background: green;
-      text-align:center;
-      font-weight:bold;
-      opacity:0.7;
-}
-
-.skip a{
-    top: -40px;
-    position: absolute;
-    background: white;
-    left: 0;
-    padding: 6px;
-    -webkit-transition: top 1s ease-out;
-    transition: top 1s ease-out;
-    z-index: 1;  
-}
-
-.skip a:focus {
-  position: absolute;
-  top: 0;
-}
-
-*:focus{
-  border: 2px solid #000000;
-}
-
-/*still needs some work*/
-.secret a {
-  text-decoration: none;
-}
-
+/* Faction Status Table */
 table{
+  display: inline;
   border-top: 2px solid black;
   border-collapse: separate;
   border-radius: 15px;
@@ -301,96 +587,24 @@ tbody tr:last-child td:last-child{
 
 tbody tr:last-child th:first-child{
   border-bottom-left-radius: 15px;
-  
 }
 
-/*newspaper sidebar
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}*/
-
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card:focus .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-.flip-card-back {
-  background-color: #2c0635;
-  color: white;
-  transform: rotateY(180deg);
 }
 
 /* Applies styles when Reduced Motion is enabled */
 @media screen and (prefers-reduced-motion: reduce) {
-	nav {
-		animation: none;
+  nav {
+    animation: none;
 }
 
 @media screen and (prefers-reduced-motion) {
-	nav{
-		animation: none;
-	}
-	}
+  nav{
+    animation: none;
+  }
+  }
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: scroll;
+  }
+}
