--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ h1{
 
 h2{
   padding-top: 10px;
+  text-align: center;
 }
 
 /*Nickname Fonts*/
@@ -279,6 +280,7 @@ footer p {
 .grid-item {
   padding: 20px;
   position: relative;
+  background-color: ivory;
 }
 
 .name {
@@ -427,6 +429,63 @@ table{
   grid-row: 3;
 }
 
+.map {
+  grid-column: 1 / span 3;
+  grid-row: auto;
+}
+
+.barwickeft {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.brightstone {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+
+.charhollow {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+
+.coalridge {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.whitecrown {
+  grid-column: 2;
+  grid-row: 3;
+  }
+  
+.crow {
+  grid-column: 3;
+  grid-row: 3;
+}
+
+.dock {
+  grid-column: 1;
+  grid-row: 4;
+}
+
+.nightmarket {
+  grid-column: 2;
+  grid-row: 4;
+}
+
+.silkshore {
+  grid-column: 3;
+  grid-row: 4;
+}
+
+.sixtowers {
+  grid-column: 2;
+  grid-row: 5;
+}
+
 .faction-grid {
   display: grid;
   margin-left: auto;
@@ -445,6 +504,7 @@ table{
   column-count: 2;
   column-gap: 40px;
   column-rule-style: solid;
+  padding: 15px;
 }
 
 .newspaper img {
@@ -512,6 +572,62 @@ table{
   grid-row: 2 / span 2;
 }
 
+/*Map*/
+.map {
+  grid-column: 1 / span 4;
+  grid-row: 1 / span 5;
+}
+
+.barwickeft {
+  grid-column: 5;
+  grid-row: 1;
+}
+
+.brightstone {
+  grid-column: 5;
+  grid-row: 2;
+}
+
+.charhollow {
+  grid-column: 5;
+  grid-row: 3;
+}
+
+.coalridge {
+  grid-column: 5;
+  grid-row: 4;
+}
+.sixtowers {
+  grid-column: 5;
+  grid-row: 5;
+}
+
+.whitecrown {
+  grid-column: 1;
+  grid-row: 6;
+  }
+
+  .crow {
+  grid-column: 2;
+  grid-row: 6;
+}
+
+.dock {
+  grid-column: 3;
+  grid-row: 6;
+}
+
+.nightmarket {
+  grid-column: 4;
+  grid-row: 6;
+}
+
+.silkshore {
+  grid-column: 5;
+  grid-row: 6;
+}
+
+  
 /*Newspaper Dimensions*/
 .newspaper {
   column-count: 3;
