--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ header{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   padding-bottom: 10px;
 }
 
@@ -37,16 +36,19 @@ header{
 nav{
   /*background-color: #ddd;*/
   padding: 20px; 
-  text-align: left;
-  display: flex;
-    width: 100%;
-  flex-direction: column;
+  width: 100%;
     background: linear-gradient(45deg, #F06553, #350706, #350706, #3c3b5f, #381c2a, #381c2a, #2c0635);
     background-size: 600% 100%;
     animation: gradient 16s linear infinite;
     animation-direction: alternate;
-
 }
+
+.nav_links{
+ display: flex;
+ flex-direction: column;
+ list-style: none;
+}
+
 
 @keyframes gradient {
     0% {background-position: 0%}
@@ -62,7 +64,9 @@ nav ul {
 }
 
 nav li {
-  float: left;
+  display:inline;
+  padding-right:20px;
+  align-items: center;
 }
 
 nav li a {
@@ -80,6 +84,86 @@ nav li a:hover:not(.active):before {
   content: "X ";
 }
 
+/* Footer */
+footer{
+  left:0px;
+  bottom:0px;
+  min-height: 60px;
+  width:100%;
+  background:#030027;
+  text-align:center;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  list-style: none;
+}
+footer p {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  list-style: none;
+}
+
+footer img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*Header & footer Tablet View*/
+@media only screen and (min-width: 600px) {
+
+    header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .nav_links {
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   flex-wrap: wrap;
+   justify-content: center;
+  }
+  footer {
+    flex-direction: row;
+  }
+
+  footer p {
+    flex-direction: row;
+    align-self: center;
+  }
+
+  footer img {
+    width: 30%;
+  }
+  }
+/*Header & Footer Desktop View */
+  @media only screen and (min-width: 800px) {
+      header{
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+  .nav_links{
+    flex-direction: row;
+  }
+
+    footer {
+    flex-direction: row;
+  }
+
+  footer p {
+    flex-direction: row;
+    padding-top: 50px;
+  }
+
+  footer img {
+    width: 30%;
+  }
+
+  }
+
 #banner {
   max-width:80%;
   display: inline;
@@ -87,13 +171,6 @@ nav li a:hover:not(.active):before {
 
 .active {
   background-color: #4e148c;
-}
-
-
-nav li{
-  display:inline;
-  padding-right:20px;
-
 }
 
 nav a{
@@ -139,15 +216,12 @@ h2{
 #twelves {
   font-family: 'Indie Flower', 'Georgia', 'Arial';
 }
-
 #frog {
   font-family: 'Dancing Script', 'Georgia', 'Arial';
 }
-
 #wicker {
   font-family: 'Bad Script', 'Georgia', 'Arial';
 }
-
 #byron {
   font-family: 'Ruge Boogie', 'Georgia', 'Arial';
 }
@@ -157,6 +231,9 @@ h2{
   background-image: url("../images/background.jpg");
   border: solid black;
 }
+
+.newspaper-background hr {
+  border-top: 1px dashed black;
 }
 .newspaper {
   column-count: 1;
@@ -165,11 +242,45 @@ h2{
 }
 
 .newspaper img {
+  width: 70%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter:sepia(100%);
+  border: solid grey;
+}
+
+/*Newspaper Tablet View*/
+@media only screen and (min-width: 600px) {
+
+/*Newspaper Dimensions*/
+.newspaper {
+  column-count: 2;
+  column-gap: 40px;
+  column-rule-style: solid;
+  padding: 15px;
+}
+
+.newspaper img {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
+}
 
+/*Newspaper Desktop View */
+@media only screen and (min-width: 800px) {
+
+.newspaper {
+  column-count: 3;
+  column-gap: 40px;
+  column-rule-style: solid;
+}
+
+.newspaper img {
+  width: 80%;
+}
+}
 
 /*parallax!*/
 .steampunk, .london, .hull {
@@ -181,40 +292,24 @@ h2{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
-
 .steampunk {
     background-image: url("../images/steampunk_landscape.jpg");
 }
-
 .london {
   background-image: url("../images/victorian_london.jpg");
 }
-
 .hull {
   background-image: url("../images/hull.png");
 }
 
-/* Footer */
-footer{
-  left:0px;
-  bottom:0px;
-  min-height: 60px;
-  width:100%;
-  background:#030027;
-  text-align:center;
-  padding-bottom: 10px;
-}
-footer p {
-  color: white;
-}
-
 .map {
-  border-radius: 8px;
+  border-radius: 10px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  min-width: 200px;
+  background: transparent;
 }
 
 
@@ -223,11 +318,10 @@ footer p {
   margin-left: auto;
   margin-right: auto;
   grid-template-columns: 1fr;
-  /*background-color: #2196F3;*/
+  background-color: ivory;
   padding: 10px;
   grid-row-gap: 15px;
 }
-
 .grid-container img {
   width: 90%;
   display: inline;
@@ -235,11 +329,11 @@ footer p {
   box-shadow: 10px 10px 5px grey;
 }
 
+/* faction card flipping provided by W3School */
 .faction-grid {
   display: grid;
-  margin-left: auto;
-  margin-right: auto;
-  grid-template-columns: 1fr;
+  grid-template-columns: auto;
+  align-items: center;
   padding: 10px;
   grid-row-gap: 15px;
 }
@@ -249,106 +343,16 @@ footer p {
   box-shadow: 10px 10px 5px grey;
 }
 
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.flex-container p {
-  padding: 10px;
-}
-
-.crew-grid {
-  display: grid;
-  grid-gap: 10px;
-  background-color: ivory;
-  padding: 10px;
-  border:1px solid black;
-  box-shadow: 10px 10px 5px grey;
-}
-
-.crew-grid img {
-  width: 80%;
-  max-width: 400px;
-  border-radius: 50%;
-  border:1px solid black;
-  backface-visibility: hidden;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid-item {
-  padding: 20px;
-  position: relative;
-  background-color: ivory;
-}
-
-.name {
-  grid-row: 2;
-  text-align: center;
-}
-
-.portrait {
-  grid-row: 1;
-}
-
-.stat {
-    grid-row: 3;
-}
-.bio {
-  grid-row: 4;
-}
-
-/*still needs some work*/
-.secret a {
-  text-decoration: none;
-}
-
-/* Faction Status Table */
-table{
-  display: none;
-}
-
-/*newspaper sidebar
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}*/
-
 /*Flip Card Gallery of Factions */
 .flip-card {
   background-color: transparent;
+  align-content: center;
+  margin-left: auto;
+  margin-right: auto;
   width: 300px;
   height: 300px;
-  
 }
-/* faction card flipping provided by W3School */
+
 .flip-card-inner {
   position: relative;
   width: 100%;
@@ -386,30 +390,93 @@ table{
   transform: rotateY(180deg);
 }
 
-/*Tablet View*/
-@media only screen and (min-width: 481px) {
-  body {
-    background-color: lightblue;
-  }
+/* Faction Status Table Not Shown in Mobile View */
+table{
+  display: none;
+}
 
-  main {
-    padding-right: 100px;
-    padding-left: 100px;
-  }
+/*Faction Gallery Tablet View*/
+@media only screen and (min-width: 750px) {
 
-    header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  .faction-grid {
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  grid-template-columns: 1fr 1fr;
+  padding: 10px;
+  grid-row-gap: 15px;
+}
+.faction-grid img {
+  width: 90%;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
 
-  nav {
-   display: flex;
-   flex-direction: row;
   }
+/*Faction Desktop view*/
+@media only screen and (min-width: 900px) {
+  .faction-grid {
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 10px;
+    grid-row-gap: 15px;
+}
+  .faction-grid img {
+    width: 90%;
+    border:1px solid black;
+    box-shadow: 10px 10px 5px grey;
+}
+}
 
-  .name {
+/*Character Profiles*/
+.crew-grid {
+  display: grid;
+  grid-gap: 10px;
+  background-color: ivory;
+  padding: 10px;
+  border:1px solid black;
+  box-shadow: 10px 10px 5px grey;
+}
+
+.crew-grid img {
+  width: 70%;
+  max-width: 400px;
+  border-radius: 50%;
+  border:1px solid black;
+  backface-visibility: hidden;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grid-item {
+  padding: 20px;
+  position: relative;
+  background-color: ivory;
+}
+
+.name {
+  grid-row: 2;
+  text-align: center;
+}
+
+.portrait {
+  grid-row: 1;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.stat {
+    grid-row: 3;
+}
+.bio {
+  grid-row: 4;
+}
+
+/*Character Profile Tablet View*/
+@media only screen and (min-width: 800px) {
+    .name {
   grid-column: 1 / span 2;
   grid-row: 2;
   text-align: center;
@@ -429,130 +496,12 @@ table{
   grid-row: 3;
 }
 
-.map {
-  grid-column: 1 / span 3;
-  grid-row: auto;
-}
-
-.barwickeft {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.brightstone {
-  grid-column: 2;
-  grid-row: 2;
-}
-
-
-.charhollow {
-  grid-column: 3;
-  grid-row: 2;
-}
-
-
-.coalridge {
-  grid-column: 1;
-  grid-row: 3;
-}
-
-.whitecrown {
-  grid-column: 2;
-  grid-row: 3;
   }
-  
-.crow {
-  grid-column: 3;
-  grid-row: 3;
-}
 
-.dock {
-  grid-column: 1;
-  grid-row: 4;
-}
-
-.nightmarket {
-  grid-column: 2;
-  grid-row: 4;
-}
-
-.silkshore {
-  grid-column: 3;
-  grid-row: 4;
-}
-
-.sixtowers {
-  grid-column: 2;
-  grid-row: 5;
-}
-
-.faction-grid {
-  display: grid;
-  margin-left: auto;
-  margin-right: auto;
-  grid-template-columns: 1fr 1fr;
-  padding: 10px;
-  grid-row-gap: 15px;
-}
-.faction-grid img {
-  width: 90%;
-  border:1px solid black;
-  box-shadow: 10px 10px 5px grey;
-}
-/*Newspaper Dimensions*/
-.newspaper {
-  column-count: 2;
-  column-gap: 40px;
-  column-rule-style: solid;
-  padding: 15px;
-}
-
-.newspaper img {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
-}
-/*Desktop view*/
+/*Character Profile Desktop View*/
 @media only screen and (min-width: 1080px) {
-  body {
-    background-color: pink;
-  }
 
-    .grid-container {
-      display: grid;
-      margin-left: auto;
-      margin-right: auto;
-      grid-template-columns: 1fr .5fr;
-      /*background-color: #2196F3;*/
-      padding: 10px;
-      grid-row-gap: 15px;
-}
-.grid-container img {
-      width: 90%;
-      display: inline;
-}
-.grid-bio {
-  display: grid;
-  grid-template-columns: .5fr 1fr;
-  padding-bottom: 20px;
-}
-
-.faction-grid {
-  display: grid;
-  margin-left: auto;
-  margin-right: auto;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 10px;
-  grid-row-gap: 15px;
-}
-.faction-grid img {
-  width: 90%;
-  border:1px solid black;
-  box-shadow: 10px 10px 5px grey;
-}
-
-.name {
+  .name {
   grid-column: 2 / span 2;
   grid-row: 1;
   text-align: center;
@@ -561,6 +510,8 @@ table{
 .portrait {
   grid-column: 1;
   grid-row: 1 / span 3;
+  margin-bottom: auto;
+  margin-top: auto;
 }
 
 .stat {
@@ -572,10 +523,102 @@ table{
   grid-row: 2 / span 2;
 }
 
+}
+
+/*still needs some work*/
+.secret a {
+  text-decoration: none;
+  color: black;
+}
+
+/*newspaper sidebar
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}*/
+
+/*City Tablet View*/
+@media only screen and (min-width: 600px) {
+
+.map {
+  grid-column: 1 / span 3;
+  grid-row: auto;
+}
+.barwickeft {
+  grid-column: 1;
+  grid-row: 2;
+}
+.brightstone {
+  grid-column: 2;
+  grid-row: 2;
+}
+.charhollow {
+  grid-column: 3;
+  grid-row: 2;
+}
+.coalridge {
+  grid-column: 1;
+  grid-row: 3;
+}
+.whitecrown {
+  grid-column: 2;
+  grid-row: 3;
+  }
+.crow {
+  grid-column: 3;
+  grid-row: 3;
+}
+.dock {
+  grid-column: 1;
+  grid-row: 4;
+}
+.nightmarket {
+  grid-column: 2;
+  grid-row: 4;
+}
+.silkshore {
+  grid-column: 3;
+  grid-row: 4;
+}
+.sixtowers {
+  grid-column: 2;
+  grid-row: 5;
+}
+}
+
+/*City Desktop View*/
+@media only screen and (min-width: 1080px) {
 /*Map*/
 .map {
   grid-column: 1 / span 4;
   grid-row: 1 / span 5;
+  margin: auto;
 }
 
 .barwickeft {
@@ -626,20 +669,13 @@ table{
   grid-column: 5;
   grid-row: 6;
 }
-
-  
-/*Newspaper Dimensions*/
-.newspaper {
-  column-count: 3;
-  column-gap: 40px;
-  column-rule-style: solid;
 }
 
-.newspaper img {
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-}
+/*Desktop view*/
+@media only screen and (min-width: 1080px) {
+  body {
+    background-color: pink;
+  }
 
 /* Faction Status Table */
 table{
@@ -707,20 +743,90 @@ tbody tr:last-child th:first-child{
 
 }
 
+/*Contact form base created by COLLEEN VAN LENT */ 
+fieldset{
+   border-radius: 10px;
+}
+legend{
+   text-align: center;
+   font-family: Cursive;
+   font-variant-caps: small-caps; 
+}
+fieldset div{
+   border: 2px solid black;
+   margin: 2%;
+   padding: 1%;
+   border-radius: 5px;
+}
+
+.contact{
+   display:grid;
+   grid-template-columns: auto 1fr;
+   grid-row-gap: 5px;
+   grid-column-gap: 5px;
+}
+
+.center {
+  text-align: center;
+}
+
+input[type=reset], input[type=submit]{
+   border: 1px solid black;
+   border-radius: 50px;
+   width: 120px;
+   padding: 3%;
+   margin-left: 10%;
+   -webkit-box-sizing: content-box;
+   -moz-box-sizing: content-box;
+   box-sizing: content-box;
+}
+input, textarea, select{
+   background-color:#FFFFFF;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+}
+
+input:focus{
+   border: 2px solid black;
+   background: #CCCCCC;
+}
+
+h2.elegantshadow {
+  color: #131313;
+  letter-spacing: .15em;
+  text-shadow: 1px -1px 0 #767676, -1px 2px 1px #737272, -2px 4px 1px #767474, -3px 6px 1px #787777, -4px 8px 1px #7b7a7a, -5px 10px 1px #7f7d7d, -6px 12px 1px #828181, -7px 14px 1px #868585, -8px 16px 1px #8b8a89, -9px 18px 1px #8f8e8d, -10px 20px 1px #949392, -11px 22px 1px #999897, -12px 24px 1px #9e9c9c, -13px 26px 1px #a3a1a1, -14px 28px 1px #a8a6a6, -15px 30px 1px #adabab, -16px 32px 1px #b2b1b0, -17px 34px 1px #b7b6b5, -18px 36px 1px #bcbbba, -19px 38px 1px #c1bfbf, -20px 40px 1px #c6c4c4, -21px 42px 1px #cbc9c8, -22px 44px 1px #cfcdcd, -23px 46px 1px #d4d2d1, -24px 48px 1px #d8d6d5, -25px 50px 1px #dbdad9, -26px 52px 1px #dfdddc, -27px 54px 1px #e2e0df, -28px 56px 1px #e4e3e2;
+}
+
 /* Applies styles when Reduced Motion is enabled */
 @media screen and (prefers-reduced-motion: reduce) {
   nav {
     animation: none;
+    background-color: #030027;
+}
+  .skip a{
+    -webkit-transition: none;
+    transition: none;
+  }
+}
 }
 
 @media screen and (prefers-reduced-motion) {
   nav{
     animation: none;
+    background-color: #030027;
   }
+    .skip a{
+    -webkit-transition: none;
+    transition: none;
+  }
+}
   }
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1024px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
+  .steampunk, .london, .hull {
     background-attachment: scroll;
   }
 }
